# Wakupator

./: .gitignore  CMakeLists.txt  LICENCE  README.md  main.c
example/host/: wakupator.service
example/machine/: register.service  register_to_wakupator.py
include/: bpf_utils.h  client.h  core.h  logger.h  monitor.h  parser.h  utils.h
include/wakupator/core/: client.h  core.h  manager.h  monitor.h
include/wakupator/log/: log.h
include/wakupator/parser/: parser.h
include/wakupator/utils/: bpf.h  net.h  utils.h
libs/cJSON/src/: cJSON_Utils.c
src/: bpf_utils.c  client.c  core.c  logger.c  main.c  monitor.c  parser.c  utils.c
src/core/: client.c  core.c  manager.c  monitor.c
src/log/: log.c
src/parser/: parser.c
src/utils/: bpf.c  net.c  utils.c
